--- a/src/app/pages/events-list/events-list.page.less
+++ b/src/app/pages/events-list/events-list.page.less
@@ -10,13 +10,25 @@
 }
 
 .events-status-column {
-  width: 15%;
+  width: 10%;
 }
 
 .events-status-pending-label {
   .label;
 
-  background: #00d900;
+  background: #d9c946;
+}
+
+.events-status-on-going-label {
+  .label;
+
+  background: #69d96c;
+}
+
+.events-status-finished-label {
+  .label;
+
+  background: #d9515b;
 }
 
 .events-type-column {
@@ -41,8 +53,50 @@
   width: 15%;
 }
 
+.events-date-column {
+  width: 10%;
+}
+
 .events-time-column {
-  width: 15%;
+  width: 10%;
+}
+
+.events-participants-column {
+  width: 10%;
+}
+
+.events-participants-label {
+  font-family: hogwartsBold;
+}
+
+.events-participants-request {
+  .events-participants-label;
+  color: #000000;
+}
+
+.events-participants-early-confirmation {
+  .events-participants-label;
+  color: #752463;
+}
+
+.events-participants-late-confirmation {
+  .events-participants-label;
+  color: #262571;
+}
+
+.events-participants-attended {
+  .events-participants-label;
+  color: #257323;
+}
+
+.events-participants-not-attended {
+  .events-participants-label;
+  color: #d40000;
+}
+
+.events-participants-canceled {
+  .events-participants-label;
+  color: #d46a16;
 }
 
 .events-add-new {
