--- a/src/app/pages/students-list/students-list.page.html
+++ b/src/app/pages/students-list/students-list.page.html
@@ -60,6 +60,12 @@
           {{getStudentStatusTypeTranslation(student.statusType)}}
         </div>
       </div>
+      <div class="list-row-item student-groups-column">
+        <div *ngFor="let groupId of student.groupIds">
+          <div class="student-groups-circle horizontal-item" [style.background-color]="getGroup(groupId).color" (click)="openGroup(groupId)">
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 </div>
