--- a/src/app/pages/students-list/students-list.page.less
+++ b/src/app/pages/students-list/students-list.page.less
@@ -20,6 +20,23 @@
   width: 20%;
 }
 
+.student-groups-column {
+  width: 10%;
+  padding-top: 15px;
+  display: flex;
+  flex-direction: row;
+}
+
+.student-groups-circle {
+  width: 20px;
+  height: 20px;
+  border-radius: 10px;
+}
+
+.student-groups-circle:hover {
+  opacity: 0.5;
+}
+
 .student-status-label {
   padding: 5px 10px;
   border-radius: 5px;
