--- a/src/app/pages/event/menu/event-menu.component.html
+++ b/src/app/pages/event/menu/event-menu.component.html
@@ -7,7 +7,7 @@
 
 <div *ngIf="!!eventId"
      [class.page-left-menu-item-active]="currentTab === 'PARTICIPANTS'"
-     [class.page-left-menu-item-inactive]="currentTab !== 'STATUS'"
+     [class.page-left-menu-item-inactive]="currentTab !== 'PARTICIPANTS'"
      (click)="navigateTo('participants')">
   <i class="fa fa-users menu-item-icon" aria-hidden="true"></i>
   <span class="horizontal-item">Участники</span>
