--- a/src/app/parts/student/payment-modal/student-payment.modal.html
+++ b/src/app/parts/student/payment-modal/student-payment.modal.html
@@ -15,6 +15,7 @@
            [placeholder]="'Введите сумму'"
            [value]="amountString"
            [valid]="!!amount"
+           [editable]="true"
            (onChange)="onAmountChange($event)">
       </div>
     </form>
