--- a/src/app/pages/event/participants/event-participants.page.html
+++ b/src/app/pages/event/participants/event-participants.page.html
@@ -43,7 +43,7 @@
   </div>
 
   <div class="footer">
-    <button [disabled]="loadingInProgress" class="btn btn-primary pull-right">
+    <button [disabled]="loadingInProgress" class="btn btn-primary pull-right" (click)="addParticipant()">
       Добавить
     </button>
   </div>
