--- a/src/app/pages/students-list/students-list.page.less
+++ b/src/app/pages/students-list/students-list.page.less
@@ -20,8 +20,12 @@
   width: 20%;
 }
 
+.student-payments-column {
+  width: 5%;
+}
+
 .student-groups-column {
-  width: 10%;
+  width: 5%;
   padding-top: 15px;
   display: flex;
   flex-direction: row;
