--- a/src/app/pages/groups-list/groups-list.page.html
+++ b/src/app/pages/groups-list/groups-list.page.html
@@ -65,6 +65,9 @@
       <div class="list-row-item groups-students-column">
         {{getGroupStudentsString(group.id)}}
       </div>
+      <div class="list-row-item groups-payment-column">
+        {{getGroupPayment(group.id)}} Р
+      </div>
     </div>
   </div>
 </div>
