--- a/src/app/pages/teachers-list/teachers-list.page.less
+++ b/src/app/pages/teachers-list/teachers-list.page.less
@@ -1,7 +1,15 @@
 @import "../../../styles/colors.less";
 
-.teachers-list-header-search {
-  width: 90%;
+.teacher-name-column {
+  width: 20%;
+}
+
+.teacher-load-column {
+  width: 20%;
+}
+
+.teacher-payment-column {
+  width: 20%
 }
 
 .teachers-list-header-add-new {
