--- a/src/app/pages/groups-list/groups-list.page.less
+++ b/src/app/pages/groups-list/groups-list.page.less
@@ -29,7 +29,11 @@
 }
 
 .groups-students-column {
-  width: 20%;
+  width: 15%;
+}
+
+.groups-payment-column {
+  width: 5%;
 }
 
 .groups-list-header-add-new {
