--- a/src/app/pages/teachers-list/teachers-list.page.html
+++ b/src/app/pages/teachers-list/teachers-list.page.html
@@ -3,7 +3,7 @@
 
   <div class="list-header-container">
     <div class="list-header">
-      <div app-search-text-input-control class="teachers-list-header-search"
+      <div app-search-text-input-control class="teacher-name-column"
            [placeholder]="'Имя'"
            (onChange)="onSearchChange($event)"></div>
     </div>
@@ -21,7 +21,18 @@
     </div>
 
     <div *ngFor="let teacher of teachers" class="list-row-clickable" (click)="openTeacherPage(teacher.id)">
-      <div class="list-row-item">{{teacher.name}}</div>
+      <div class="list-row-item teacher-name-column">
+        {{teacher.name}}
+      </div>
+      <div class="list-row-item teacher-load-column">
+        {{getLoadMinutes(teacher.id) / 60.0}} часов
+      </div>
+      <div class="list-row-item teacher-payment-column">
+        {{getWeeklyPayment(teacher.id)}} Р
+      </div>
+      <div class="list-row-item teacher-payment-column">
+        {{getWeeklyPayment(teacher.id)}} Р
+      </div>
     </div>
   </div>
 </div>
