--- a/src/app/pages/teachers-list/teachers-list.page.less
+++ b/src/app/pages/teachers-list/teachers-list.page.less
@@ -2,14 +2,22 @@
 
 .teacher-name-column {
   width: 20%;
+  padding-right: 20px;
 }
 
 .teacher-load-column {
   width: 20%;
+  padding-right: 20px;
 }
 
-.teacher-payment-column {
-  width: 20%
+.teacher-income-column {
+  width: 20%;
+  padding-right: 20px;
+}
+
+.teacher-salary-column {
+  width: 20%;
+  padding-right: 20px;
 }
 
 .teachers-list-header-add-new {
