--- a/src/styles/list.less
+++ b/src/styles/list.less
@@ -14,9 +14,10 @@
   flex-direction: row;
   width: calc(~'100% - 16px');
   min-height: 60px;
-  margin-right: 16px;
+  line-height: 40px;
   padding: 10px 0 20px 10px;
   background: @color-gray-2;
+  font-size: 14px;
 }
 
 .list-content {
