--- a/src/app/controls/search-select-control/search-select.control.html
+++ b/src/app/controls/search-select-control/search-select.control.html
@@ -1,11 +1,14 @@
 <div class="input-group">
-  <span class="input-group-addon">
+  <span class="input-group-addon app-input-icon">
     <i class="fa fa-search" aria-hidden="true"></i>
   </span>
 
   <select class="form-control app-select" (change)="onValueChange($event.target.value)">
+    <option *ngIf="!!empty" value="">
+      {{empty}}
+    </option>
     <option *ngFor="let item of items" value="{{item.value}}" [attr.selected]="currentValue === item.value ? 'selected': null">
-      {{item.name}}
+      {{item.name === '' ? (item.value | translate) : item.name}}
     </option>
   </select>
 </div>
