--- a/src/app/pages/cabinets-list/cabinets-list.page.less
+++ b/src/app/pages/cabinets-list/cabinets-list.page.less
@@ -1,7 +1,18 @@
 @import "../../../styles/colors.less";
 
-.cabinets-list-header-search {
-  width: 90%;
+.cabinets-list-name-column {
+  width: 30%;
+  padding-right: 20px;
+}
+
+.cabinets-list-load-column {
+  width: 20%;
+  padding-right: 20px;
+}
+
+.cabinets-economy-column {
+  width: 20%;
+  padding-right: 20px;
 }
 
 .cabinets-list-header-add-new {
