--- a/src/app/pages/teachers-list/teachers-list.page.less
+++ b/src/app/pages/teachers-list/teachers-list.page.less
@@ -7,17 +7,38 @@
 
 .teacher-load-column {
   width: 20%;
-  padding-right: 20px;
+}
+
+.teacher-economy-column {
+  width: 25%;
 }
 
 .teacher-income-column {
-  width: 20%;
-  padding-right: 20px;
+  width: 7%;
 }
 
-.teacher-salary-column {
-  width: 20%;
-  padding-right: 20px;
+.teacher-outcome-column {
+  width: 7%;
+}
+
+.teacher-economy-result-column {
+  width: 7%;
+}
+
+.teacher-economy-coefficient-column {
+  width: 4%;
+}
+
+.teacher-groups-column {
+  width: 30%;
+}
+
+.teacher-groups-item {
+  .teacher-groups-column;
+
+  padding-top: 15px;
+  display: flex;
+  flex-direction: row;
 }
 
 .teachers-list-header-add-new {
