--- a/src/app/controls/form-select-control/form-select.control.html
+++ b/src/app/controls/form-select-control/form-select.control.html
@@ -5,6 +5,6 @@
 </label>
 <select id="status" class="form-control" name="status" (change)="onValueChange($event.target.value)">
   <option *ngFor="let item of getItems()" value="{{item.value}}" [attr.selected]="getValue() === item.value ? 'selected' : null">
-    {{item.name === null ? (item.value | translate) : item.name}}
+    {{item.name === '-' ? (item.value | translate) : item.name}}
   </option>
 </select>
