--- a/src/app/pages/cabinets-list/cabinets-list.page.html
+++ b/src/app/pages/cabinets-list/cabinets-list.page.html
@@ -3,13 +3,25 @@
 
   <div class="list-header-container">
     <div class="list-header">
-      <div app-search-text-input-control class="cabinets-list-header-search"
+      <div app-search-text-input-control class="cabinets-list-name-column"
            [placeholder]="'Название'"
            (onChange)="onSearchChange($event)"></div>
+
+      <div class="cabinets-list-load-column">
+        <div class="list-header-label">
+          Загруженность
+        </div>
+      </div>
+
+      <div class="cabinets-economy-column">
+        <div class="list-header-label">
+          Доход
+        </div>
+      </div>
     </div>
 
     <div class="cabinets-list-header-add-new">
-      <button class="btn btn-primary pull-right" (click)="openNewCabinetPage()">
+      <button class="btn btn-primary pull-right" (click)="goToNewCabinetPage()">
         Добавить
       </button>
     </div>
@@ -21,8 +33,18 @@
       <fa name="spinner" class="loading-sign" animation="spin"></fa>
     </div>
 
-    <div *ngFor="let cabinet of cabinets" class="list-row-clickable" (click)="openCabinetPage(cabinet.id)">
-      <div class="list-row-item">{{cabinet.name}}</div>
+    <div *ngFor="let cabinet of cabinets" class="list-row-clickable" (click)="goToCabinetPage(cabinet.id)">
+      <div class="list-row-item cabinets-list-name-column">
+        {{cabinet.name}}
+      </div>
+
+      <div class="list-row-item cabinets-list-load-column">
+        {{getLoad(cabinet.id) / 60}} часов
+      </div>
+
+      <div class="list-row-item cabinets-economy-column">
+        {{getIncome(cabinet.id)}} Р
+      </div>
     </div>
   </div>
 </div>
