--- a/src/app/pages/students-list/students-list.page.less
+++ b/src/app/pages/students-list/students-list.page.less
@@ -20,12 +20,28 @@
   width: 20%;
 }
 
+.student-status-column-item {
+  .student-groups-column;
+
+  margin-top: 10px;
+  padding-right: 20px;
+}
+
 .student-payments-column {
-  width: 5%;
+  width: 20%
 }
 
 .student-groups-column {
-  width: 5%;
+  width: 20%;
+}
+
+.student-groups-column-header {
+  .student-groups-column;
+}
+
+.student-groups-column-item {
+  .student-groups-column;
+
   padding-top: 15px;
   display: flex;
   flex-direction: row;
@@ -48,48 +64,6 @@
   margin-top: 10px;
   margin-right: 20px;
   text-align: center;
-}
-
-.student-status-label-request {
-  .student-status-label;
-
-  background-color: #cc8800;
-  color: #ffffff;
-}
-
-.student-status-test-assigned {
-  .student-status-label;
-
-  background-color: #009955;
-  color: #ffffff;
-}
-
-.student-status-label-free-lesson-assigned {
-  .student-status-label;
-
-  background-color: #559900;
-  color: #ffffff;
-}
-
-.student-status-label-group-assigned {
-  .student-status-label;
-
-  background-color: #00aa00;
-  color: #ffffff;
-}
-
-.student-status-label-temporarily-stopped {
-  .student-status-label;
-
-  background-color: #6f6e6f;
-  color: #ffffff;
-}
-
-.student-status-label-left {
-  .student-status-label;
-
-  background-color: #aa0000;
-  color: #ffffff;
 }
 
 .students-list-header-add-new {
