--- a/src/styles/list.less
+++ b/src/styles/list.less
@@ -15,9 +15,18 @@
   width: calc(~'100% - 16px');
   min-height: 60px;
   line-height: 40px;
-  padding: 10px 0 20px 10px;
+  padding: 10px 0 20px 20px;
   background: @color-gray-2;
   font-size: 14px;
+}
+
+.list-header-label {
+  height: 40px;
+  border-radius: 4px;
+  border: 1px solid #cccccc;
+  padding-left: 15px;
+  background: #f5f5f5;
+  margin-right: 20px;
 }
 
 .list-content {
