--- a/src/app/pages/events-list/events-list.page.less
+++ b/src/app/pages/events-list/events-list.page.less
@@ -9,8 +9,12 @@
   text-align: center;
 }
 
+.events-list-header-search {
+  padding-right: 20px;
+}
+
 .events-status-column {
-  width: 10%;
+  width: 15%;
 }
 
 .events-status-pending-label {
